--- a/src/translations/de/LC_MESSAGES/lepg.po
+++ b/src/translations/de/LC_MESSAGES/lepg.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: lepg-py\n"
-"POT-Creation-Date: 2021-05-16 11:20+0200\n"
-"PO-Revision-Date: 2021-05-16 11:21+0200\n"
+"POT-Creation-Date: 2021-05-18 19:43+0200\n"
+"PO-Revision-Date: 2021-05-18 19:56+0200\n"
 "Last-Translator: Stefan Feuz\n"
 "Language-Team: Stefan Feuz\n"
 "Language: de\n"
@@ -551,55 +551,55 @@ msgstr "Letzte Rippe"
 
 #: DataStores/ProcessorModel.py:3727
 msgid "Row 2 A"
-msgstr "Spalte 2 A"
+msgstr "Param A"
 
 #: DataStores/ProcessorModel.py:3728
 msgid "Row 2 B"
-msgstr "Spalte 2 B"
+msgstr "Param B"
 
 #: DataStores/ProcessorModel.py:3729
 msgid "Row 2 C"
-msgstr "Spalte 2 C"
+msgstr "Param C"
 
 #: DataStores/ProcessorModel.py:3730
 msgid "Row 2 D"
-msgstr "Spalte 2 D"
+msgstr "Param D"
 
 #: DataStores/ProcessorModel.py:3731
 msgid "Row 2 E"
-msgstr "Spalte 2 E"
+msgstr "Param E"
 
 #: DataStores/ProcessorModel.py:3732
 msgid "Row 3 A"
-msgstr "Spalte 3 A"
+msgstr "Param F"
 
 #: DataStores/ProcessorModel.py:3733
 msgid "Row 3 B"
-msgstr "Spalte 3 B"
+msgstr "Param G"
 
 #: DataStores/ProcessorModel.py:3734
 msgid "Row 3 C"
-msgstr "Spalte 3 C"
+msgstr "Param H"
 
 #: DataStores/ProcessorModel.py:3735
 msgid "Row 3 D"
-msgstr "Spalte 3 D"
+msgstr "Param I"
 
 #: DataStores/ProcessorModel.py:3736
 msgid "Row 4 A"
-msgstr "Spalte 4 A"
+msgstr "S1"
 
 #: DataStores/ProcessorModel.py:3737
 msgid "Row 4 B"
-msgstr "Spalte 4 B"
+msgstr "S2"
 
 #: DataStores/ProcessorModel.py:3738
 msgid "Row 4 C"
-msgstr "Spalte 4 C"
+msgstr "S3"
 
 #: DataStores/ProcessorModel.py:3739
 msgid "Row 4 D"
-msgstr "Spalte 4 D"
+msgstr "S4"
 
 #: DataStores/ProcessorModel.py:3945
 msgid "Initial Rib"
@@ -1710,11 +1710,11 @@ msgstr ""
 
 #: Windows/JoncsDefinition.py:83
 msgid "Joncs definition (Nylon rods)"
-msgstr ""
+msgstr "Stäbchen"
 
 #: Windows/JoncsDefinition.py:85
 msgid "Number of blocs"
-msgstr ""
+msgstr "Anzahl Blöcke"
 
 #: Windows/JoncsDefinition.py:220
 msgid "1"
@@ -1730,66 +1730,90 @@ msgid "Number of groups"
 msgstr "Anzahl der Konfigurationen"
 
 #: Windows/JoncsDefinition.py:266
-#, fuzzy
-#| msgid "PreProc-WingNameDesc"
 msgid "JoncsDef-FirstRibDesc"
-msgstr "Flügelname"
+msgstr "Erste Rippe der aktuellen Konfiguration"
 
 #: Windows/JoncsDefinition.py:267
 msgid "JoncsDef-LastRibDesc"
-msgstr ""
+msgstr "Letzte Rippe der aktuellen Konfiguration"
 
 #: Windows/JoncsDefinition.py:268
 msgid "JoncsDef-pBADesc"
 msgstr ""
+"Parameter A dieser Konfiguration\n"
+"Orientiere Dich bitte auf der Hilfeseite zur genauen Definition"
 
 #: Windows/JoncsDefinition.py:269
 msgid "JoncsDef-pBBDesc"
 msgstr ""
+"Parameter B dieser Konfiguration\n"
+"Orientiere Dich bitte auf der Hilfeseite zur genauen Definition"
 
 #: Windows/JoncsDefinition.py:270
 msgid "JoncsDef-pBCDesc"
 msgstr ""
+"Parameter C dieser Konfiguration\n"
+"Orientiere Dich bitte auf der Hilfeseite zur genauen Definition"
 
 #: Windows/JoncsDefinition.py:271
 msgid "JoncsDef-pBDDesc"
 msgstr ""
+"Parameter D dieser Konfiguration\n"
+"Orientiere Dich bitte auf der Hilfeseite zur genauen Definition"
 
 #: Windows/JoncsDefinition.py:272
 msgid "JoncsDef-pBEDesc"
 msgstr ""
+"Parameter E dieser Konfiguration\n"
+"Orientiere Dich bitte auf der Hilfeseite zur genauen Definition"
 
 #: Windows/JoncsDefinition.py:273
 msgid "JoncsDef-pCADesc"
 msgstr ""
+"Parameter F dieser Konfiguration\n"
+"Orientiere Dich bitte auf der Hilfeseite zur genauen Definition"
 
 #: Windows/JoncsDefinition.py:274
 msgid "JoncsDef-pCBDesc"
 msgstr ""
+"Parameter G dieser Konfiguration\n"
+"Orientiere Dich bitte auf der Hilfeseite zur genauen Definition"
 
 #: Windows/JoncsDefinition.py:275
 msgid "JoncsDef-pCCDesc"
 msgstr ""
+"Parameter H dieser Konfiguration\n"
+"Orientiere Dich bitte auf der Hilfeseite zur genauen Definition"
 
 #: Windows/JoncsDefinition.py:276
 msgid "JoncsDef-pCDDesc"
 msgstr ""
+"Parameter I dieser Konfiguration\n"
+"Orientiere Dich bitte auf der Hilfeseite zur genauen Definition"
 
 #: Windows/JoncsDefinition.py:277
 msgid "JoncsDef-pDADesc"
 msgstr ""
+"Parameter S1 dieser Konfiguration\n"
+"Orientiere Dich bitte auf der Hilfeseite zur genauen Definition"
 
 #: Windows/JoncsDefinition.py:278
 msgid "JoncsDef-pDBDesc"
 msgstr ""
+"Parameter S2 dieser Konfiguration\n"
+"Orientiere Dich bitte auf der Hilfeseite zur genauen Definition"
 
 #: Windows/JoncsDefinition.py:279
 msgid "JoncsDef-pDCDesc"
 msgstr ""
+"Parameter S3 dieser Konfiguration\n"
+"Orientiere Dich bitte auf der Hilfeseite zur genauen Definition"
 
 #: Windows/JoncsDefinition.py:280
 msgid "JoncsDef-pDDDesc"
 msgstr ""
+"Parameter S4 dieser Konfiguration\n"
+"Orientiere Dich bitte auf der Hilfeseite zur genauen Definition"
 
 #: Windows/Lines.py:84
 msgid "Edit Lines"
@@ -1979,7 +2003,7 @@ msgstr ""
 
 #: Windows/NoseMylars.py:110
 msgid "NoseMylars-FirstRibDesc"
-msgstr ""
+msgstr "Erste Rippe der aktuellen Konfiguration"
 
 #: Windows/NoseMylars.py:111
 msgid "NoseMylars-LastRibDesc"
@@ -2525,7 +2549,7 @@ msgstr ""
 
 #: Windows/ThreeDShaping.py:213
 msgid "3DSh-FirstRibDesc"
-msgstr ""
+msgstr "Erste Rippe der aktuellen Konfiguration"
 
 #: Windows/ThreeDShaping.py:214
 msgid "3DSh-LastRibDesc"
@@ -2834,7 +2858,7 @@ msgid "Joncs definitions"
 msgstr "Stäbchen Eintrittskante"
 
 #: lepg.py:406
-msgid "Edit Joncs (Nylon rods) definition"
+msgid "Edit Joncs (nylon rods) definition"
 msgstr "Bearbeite die Einstellungen für die Stäbchen an der Eintrittskante"
 
 #: lepg.py:409
